--- a/src/main/resources/jdbc.properties
+++ b/src/main/resources/jdbc.properties
@@ -1,4 +1,4 @@
 user=root
 password=123456
-url=jdbc:mysql://localhost:3306/jdbc_test
+url=jdbc:mysql://localhost:3306/jdbc_test?rewriteBatchedStatements=true
 driverClass=com.mysql.cj.jdbc.Driver
